<resources>
    <string name="app_name">DanaApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="uRemainingInit">.. u</string>
    <string name="basals_prompt">100%</string>

    <string-array name="basals_arrays">
        <item>  0%</item>
        <item> 10%</item>
        <item> 20%</item>
        <item> 30%</item>
        <item> 40%</item>
        <item> 50%</item>
        <item> 60%</item>
        <item> 70%</item>
        <item> 80%</item>
        <item> 90%</item>
        <item>100%</item>
        <item>110%</item>
        <item>120%</item>
        <item>130%</item>
        <item>140%</item>
        <item>150%</item>
        <item>160%</item>
        <item>170%</item>
        <item>180%</item>
        <item>190%</item>
        <item>200%</item>
    </string-array>

    <string name="ns_api_title">Nightscout connection</string>
    <string name="ns_enable_title">Connect to Nightscout</string>
    <string name="ns_url_title">Nightscout URL</string>
    <string name="ns_url_dialogtitle">Enter your Nightscout URL</string>
    <string name="ns_url_dialogmessage">This only the base URL</string>
    <string name="ns_api_secret_title">Nightscout API secret</string>
    <string name="ns_api_secret_dialogtitle">Enter your Nightscout API_SECRET</string>
    <string name="ns_api_secret_dialogmessage">API_SECRET on the server should match yourpassphrase in this setting.</string>
    <string name="ns_accept_commands_title">Accept commands for pump</string>

    <string name="ns_sync_title">Nightscout synchronization</string>
    <string name="ns_sync_profile_title">Synchronize profile</string>
    <string name="ns_sync_upload_treatments_title">Upload treatments</string>
    <string name="title_activity_pump_control">PumpControlActivity</string>

</resources>
