<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="ns_sync"
        android:title="@string/ns_sync_title">

            <ListPreference
                android:title="@string/ns_sync_profile_title"
                android:key="ns_sync_profile"
                android:dependency="ns_enable"
                android:defaultValue="None"
                android:entries="@array/ns_sync_profile_values"
                android:entryValues="@array/ns_sync_profile_values" />

        <SwitchPreference
            android:title="@string/ns_sync_upload_treatments_title"
            android:key="ns_sync_upload_treatments"
            android:dependency="ns_enable"
            android:summary="">
        </SwitchPreference>

    </PreferenceCategory>

</PreferenceScreen>